tests/unit-fail/j050a.ref
Error: UB-CEA2
Desctription: Pointer difference outside the range that can be represented by object of type ptrdiff_t.
Type: Undefined behavior.
See also: C11 sec. 6.5.6:9, J.2:1 item 50
  at main(j050a.c:11)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
